--- a/mgkbbobo.html
+++ b/mgkbbobo.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea possimus eligendi excepturi commodi vel aspernatur rerum animi quo non, odio consequatur ipsa sapiente doloremque, molestiae iste dolores explicabo eveniet vitae?
+
+    say hello 
 </body>
 </html>
